--- a/infra/config/default.yaml
+++ b/infra/config/default.yaml
@@ -1,5 +1,6 @@
-K8sCluster:
-  VpcCidrRange: '10.36.0.0/16'
+Vpc:
+  CidrRange: '10.36.0.0/16'
   MaxAZs: 2
   NatGateways: 1
   UseNatInstances: 'true'
+Eks: []
