--- a/infra/config/default.deployment.template.yaml
+++ b/infra/config/default.deployment.template.yaml
@@ -1,4 +1,7 @@
-AWSAccountID: "<AWS account id>"
-AWSRegion: "eu-west-1"
-Prefix: "spark-eks"
-AllowedIPs: "<CIDR range of allowed public IP addresses>"
+AWSAccountID: '<AWS account id>'
+AWSRegion: 'eu-west-1'
+Prefix: 'spark-eks'
+AdminUserArns:
+  - '<ARN of IAM users to be set as administrators>'
+AllowedIpRanges: 
+  - '<CIDR ranges of allowed public IP addresses>'
