--- a/infra/package.json
+++ b/infra/package.json
@@ -24,6 +24,7 @@
     "@aws-cdk/core": "1.117.0",
     "@aws-cdk/aws-ec2": "1.117.0",
     "@aws-cdk/aws-eks": "1.117.0",
+    "@aws-cdk/aws-iam": "1.117.0",
     "js-yaml": "^4.0.0"
   }
 }
