--- a/manifests/spark-pi.yaml
+++ b/manifests/spark-pi.yaml
@@ -7,19 +7,19 @@ spec:
   sparkVersion: 3.1.1
   type: Scala
   mode: cluster
-  image: gcr.io/spark/spark:v3.1.1
+  image: gcr.io/spark-operator/spark:v3.1.1
   mainClass: org.apache.spark.examples.SparkPi
   mainApplicationFile: local:///opt/spark/examples/jars/spark-examples_2.12-3.1.1.jar
   driver:
     cores: 1
-    coreLimit: 200m
-    memory: 512m
+    coreLimit: "1"
+    memory: "512m"
     labels:
       version: 3.1.1
     serviceAccount: spark
   executor:
     cores: 1
     instances: 1
-    memory: 512m
+    memory: "512m"
     labels:
       version: 3.1.1
