--- a/infra/package.json
+++ b/infra/package.json
@@ -25,6 +25,8 @@
     "@aws-cdk/aws-ec2": "1.117.0",
     "@aws-cdk/aws-eks": "1.117.0",
     "@aws-cdk/aws-iam": "1.117.0",
+    "@aws-cdk/aws-ecr": "1.117.0",
+    "@aws-cdk/aws-ecr-assets": "1.117.0",
     "js-yaml": "^4.0.0"
   }
 }
