--- a/infra/config/default.yaml
+++ b/infra/config/default.yaml
@@ -1,6 +1,9 @@
+Eks:
+  SparkOperatorVersion: 1.1.6
+Spark:
+  Version: 3.1.1
 Vpc:
   CidrRange: '10.36.0.0/16'
   MaxAZs: 2
   NatGateways: 1
   UseNatInstances: 'true'
-Eks: []
