Run hello world custom spark app

--- a/infra/assets/docker-images/python-spark-pi/Dockerfile
+++ b/infra/assets/docker-images/python-spark-pi/Dockerfile
@@ -1,3 +1,5 @@
-FROM alpine
+ARG SPARK_VERSION
 
-COPY application.py /opt/spark/application.py
+FROM gcr.io/spark-operator/spark-py:v${SPARK_VERSION}
+
+COPY application.py /opt/spark-job/application.py
