--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -24,9 +24,11 @@
     "@aws-cdk/core": "1.117.0",
     "@aws-cdk/aws-ec2": "1.117.0",
     "@aws-cdk/aws-eks": "1.117.0",
-    "@aws-cdk/aws-iam": "1.117.0",
     "@aws-cdk/aws-ecr": "1.117.0",
     "@aws-cdk/aws-ecr-assets": "1.117.0",
+    "@aws-cdk/aws-iam": "1.117.0",
+    "@aws-cdk/aws-s3": "1.117.0",
+    "@aws-cdk/aws-s3-deployment": "1.117.0",
     "js-yaml": "^4.0.0"
   }
 }
