--- a/infrastructure/config/default.yaml
+++ b/infrastructure/config/default.yaml
@@ -1,9 +1,12 @@
+DeployJobs:
+  SparkPi: 'false'
+  WeatherData: 'true'
 Eks:
   SparkOperatorVersion: 1.1.6
 Spark:
   Version: 3.1.1
-  HadoopVersion: 3.2.0
-  AwsSdkVersion: 1.11.874
+  HadoopVersion: 2.7.4
+  AwsSdkVersion: 1.7.4
 Vpc:
   CidrRange: '10.36.0.0/16'
   MaxAZs: 2
