Attempts to read and write to S3

--- a/infrastructure/assets/docker-images/weather-data/Dockerfile
+++ b/infrastructure/assets/docker-images/weather-data/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
   && rm -rf /var/lib/apt/lists/*
 
 RUN wget https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/${HADOOP_VERSION}/hadoop-aws-${HADOOP_VERSION}.jar -P /tmp/spark-jars/
-RUN wget https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk/${AWS_SDK_VERSION}/aws-java-sdk-bundle-${AWS_SDK_VERSION}.jar -P /tmp/spark-jars/
+RUN wget https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk/${AWS_SDK_VERSION}/aws-java-sdk-${AWS_SDK_VERSION}.jar -P /tmp/spark-jars/
 
 
 FROM gcr.io/spark-operator/spark-py:v${SPARK_VERSION}
