--- a/infrastructure/config/default.yaml
+++ b/infrastructure/config/default.yaml
@@ -1,12 +1,12 @@
 DeployJobs:
   SparkPi: 'false'
-  WeatherData: 'true'
+  WeatherData: 'false'
 Eks:
   SparkOperatorVersion: 1.1.6
 Spark:
   Version: 3.1.1
-  HadoopVersion: 2.7.4
-  AwsSdkVersion: 1.7.4
+  HadoopVersion: 3.3.1
+  AwsSdkBundleVersion: 1.11.901
 Vpc:
   CidrRange: '10.36.0.0/16'
   MaxAZs: 2
